--- a/src/components/AppCheckbox/style.module.scss
+++ b/src/components/AppCheckbox/style.module.scss
@@ -27,7 +27,7 @@
   &__input:checked+&__label::before {
     border-radius: 3px;
     background-color: $color-accent-main;
-    background-image: url("../../assets/icons/checked.svg");
+    background-image: url("../../assets/checked.svg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5px;
