--- a/src/components/Separator/style.module.scss
+++ b/src/components/Separator/style.module.scss
@@ -9,6 +9,7 @@
   font-weight: 300;
   gap: 6px;
   &__line {
+    display: block;
     width: 100%;
     height: 1px;
     background-color: $detail-color;
