--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,7 +16,7 @@ $color-primary-dark-gray: #222;
 
 $color-accent-gold: #ab8956;
 $color-accent-red: #9b4b4b;
-$color-accent-error: #ae2917;
+$color-accent-error: #c80000;
 $color-accent-main: #fe4d01;
 
 $color-secondary-white: #fcfcfc;
