--- a/src/components/EmailInput/style.module.scss
+++ b/src/components/EmailInput/style.module.scss
@@ -16,23 +16,23 @@
   &__error {
     color: $color-accent-error;
   }
-}
-
-
-.big {
-  font-weight: 300;
-  border-radius: 10px;
-  font-size: 20px;
-  padding: 12px 16px;
-  &::placeholder {
-    font-size: 20px;
+  &.big {
     font-weight: 300;
-    color: $color-placeholder;
-  }
-  @media(max-width: $md3) {
-    font-size: 17px;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 12px 16px;
     &::placeholder {
+      font-size: 20px;
+      font-weight: 300;
+      color: $color-placeholder;
+    }
+    @media(max-width: $md3) {
       font-size: 17px;
+      &::placeholder {
+        font-size: 17px;
+      }
     }
   }
 }
+
+
