--- a/src/components/Button/style.module.scss
+++ b/src/components/Button/style.module.scss
@@ -5,31 +5,31 @@
   font-size: 22px;
   font-weight: 700;
   transition: background-color 0.3s ease-in-out;
-}
+  &.big {
+    border-radius: 13px;
+    width: 289px;
+    @media(max-width: $md3) {
+      width: 100%;
+      font-size: 16px;
+      padding: 16px 0;
+    }
+  }
 
-.big {
-  border-radius: 13px;
-  width: 289px;
-  @media(max-width: $md3) {
-    width: 100%;
-    font-size: 16px;
-    padding: 16px 0;
+  &.dark {
+    background-color: $color-dark-main;
+    color: $color-light-main;
+    &:hover {
+      background-color: $color-dark-main-hover;
+    }
+  }
+
+  &.neutral {
+    background-color: $neutral-color;
+    color: $color-dark-main;
+    &:hover {
+      background-color: $neutral-color-hover;
+    }
   }
 }
 
-.dark {
-  background-color: $color-dark-main;
-  color: $color-light-main;
-  &:hover {
-    background-color: $color-dark-main-hover;
-  }
-}
-
-.neutral {
-  background-color: $neutral-color;
-  color: $color-dark-main;
-  &:hover {
-    background-color: $neutral-color-hover;
-  }
-}
 
