--- a/src/components/PasswordInput/style.module.scss
+++ b/src/components/PasswordInput/style.module.scss
@@ -1,10 +1,15 @@
 @import '../../_variables';
 
 .text-field {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5px;
+  &__wrapper {
+    position: relative;
+    width: 100%;
+  }
   &__input {
     width: 100%;
     background-color: $neutral-color;
@@ -35,6 +40,40 @@
   }
 }
 
-input[type="password"] {
+.show-password {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 13px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
 
+.spoiler {
+  position: absolute;
+  top: 50%;
+  left: 13px;
+  transform: translateY(-50%);
+  display: inline-block;
+  height: 20px;
+  overflow: hidden;
+  &__container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+input[type="password"] {
+  color: $neutral-color;;
+}
+
+.fantom-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
+  font-weight: 300;
+  opacity: 0;
 }
