--- a/src/components/PasswordInput/style.module.scss
+++ b/src/components/PasswordInput/style.module.scss
@@ -12,6 +12,13 @@
     width: 100%;
   }
 
+  &__description {
+    color: $color-dark-main;
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 6px;
+  }
+
   &__input {
     width: 100%;
     background-color: $neutral-color;
