--- a/src/components/Select/style.module.scss
+++ b/src/components/Select/style.module.scss
@@ -42,13 +42,13 @@
   &__variants {
     position: absolute;
     left: 0;
+    right: 0;
     display: flex;
     flex-direction: column;
     border: 1px solid $color-secondary-gray;
     border-radius: 0 0 8px 8px;
     border-top: none;
     color: $color-dark-secondary;
-    width: 145px;
     background-color: inherit;
     max-height: 140px;
     overflow-y: auto;
