Added Modal component

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -35,5 +35,14 @@ $neutral-color-hover: #dcdcdc;
 $detail-color: #ccc;
 
 $color-placeholder: #b6b6b6;
+
+$color-overlay: rgba(0 0 0 / 60%);
 /*--------------------*/
+
+// Fonts
 $font-inter: "Inter", sans-serif;
+/*--------------------*/
+
+// Z - индексы
+$z-index-overlay: 10;
+/*--------------------*/
