Fixed Modal component

--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -24,11 +24,11 @@
     cursor: pointer;
   }
 
-  .isOpen {
+  & .isOpen {
     transform: scale(1);
   }
 
-  .isClosing {
+  & .isClosing {
     transform: scale(0.5);
   }
 }
