--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -26,10 +26,14 @@
 
 }
 
-.isOpen .content {
-  transform: scale(1);
+.isOpen {
+  .content {
+    transform: scale(1);
+  }
 }
 
-.isClosing .content {
-  transform: scale(0.5);
+.isClosing {
+  .content {
+    transform: scale(0.5);
+  }
 }
