Fixed Modal component

--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -23,17 +23,16 @@
     right: 39px;
     cursor: pointer;
   }
-
 }
 
 .isOpen {
-  .content {
+  & .content {
     transform: scale(1);
   }
 }
 
 .isClosing {
-  .content {
+  & .content {
     transform: scale(0.5);
   }
 }
