Fixed Modal component

--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -23,16 +23,14 @@
     right: 39px;
     cursor: pointer;
   }
-}
 
-.isOpen {
-  & .content {
+  & .isOpen {
     transform: scale(1);
   }
-}
 
-.isClosing {
-  & .content {
+  .isClosing {
     transform: scale(0.5);
   }
 }
+
+
