--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -9,6 +9,14 @@
   z-index: -1;
   opacity: 0;
   pointer-events: none;
+
+  &.isOpen .content {
+    transform: scale(1);
+  }
+
+  &.isClosing .content {
+    transform: scale(0.5);
+  }
 }
 
 .overlay {
