Fixed Modal component

--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -23,6 +23,14 @@
     right: 39px;
     cursor: pointer;
   }
+
+  &.isOpen {
+    transform: scale(1);
+  }
+
+  &.isClosing {
+    transform: scale(0.5);
+  }
 }
 
 
