--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -4,7 +4,6 @@
   background-color: $detail-color;
   border-radius: 30px;
   transition: 0.4s transform;
-  transform: scale(0.5);
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -29,6 +28,10 @@
   }
 
   &.isClosing {
+    transform: scale(0.5);
+  }
+
+  &.isOpening {
     transform: scale(0.5);
   }
 }
