--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% + 80px);
   z-index: -1;
   opacity: 0;
   pointer-events: none;
