--- a/src/components/Modal/Components/ModalDouble/style.module.scss
+++ b/src/components/Modal/Components/ModalDouble/style.module.scss
@@ -4,12 +4,19 @@
   background-color: $detail-color;
   border-radius: 30px;
   transition: 0.4s transform;
+  transform: scale(0.5);
   width: 60%;
   display: flex;
   flex-direction: column;
   gap: 13px;
   position: relative;
   max-height: calc(100vh - 40px);
+  overflow-x: auto;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__top, &__bottom {
     padding: 40px 55px;
