--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -5,16 +5,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% + 80px);
+  height: 100%;
   z-index: -1;
   opacity: 0;
   pointer-events: none;
-  overflow-x: auto;
-  scrollbar-width: none;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
 
   &.isOpen {
     pointer-events: auto;
