--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -24,5 +24,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @media(max-width: $md5) {
+    align-items: flex-end;
+  }
 }
 
