Fixed Modal component

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -14,7 +14,12 @@
     pointer-events: auto;
     z-index: $z-index-overlay;
     opacity: 1;
+
+    & body {
+      overflow: hidden;
+    }
   }
+
 }
 
 .overlay {
