Fixed Modal component

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -14,10 +14,6 @@
     pointer-events: auto;
     z-index: $z-index-overlay;
     opacity: 1;
-
-    & body {
-      overflow: hidden;
-    }
   }
 
 }
@@ -34,3 +30,6 @@
   }
 }
 
+.no-scroll {
+  overflow: hidden;
+}
