--- a/src/components/MultipleSelect/style.module.scss
+++ b/src/components/MultipleSelect/style.module.scss
@@ -38,5 +38,11 @@
       height: 100%;
       object-fit: contain;
     }
+
+    & svg {
+      & path {
+        fill: $color-dark-main;
+      }
+    }
   }
 }
