Added FileInput component

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -22,6 +22,7 @@ $color-accent-main: #fe4d01;
 $color-secondary-white: #fcfcfc;
 $color-secondary-gray: #9c9c9c;
 $color-secondary-black: #1a1818;
+$color-secondary-light-gray: #d2d2d2;
 
 $color-dark-main: #434343;
 $color-dark-secondary: #444444;
@@ -29,6 +30,7 @@ $color-dark-main-hover: #333333;
 
 $color-light-main: #f3f1f1;
 $color-light-bg: #fffcf8;
+$color-gray-bg: #f4f4f4;
 
 $neutral-color: #eee;
 $neutral-color-hover: #dcdcdc;
