Changed FileInput component

--- a/src/components/FileInput/style.module.scss
+++ b/src/components/FileInput/style.module.scss
@@ -37,7 +37,9 @@
   &__buttons {
     display: flex;
     align-items: center;
-    gap: 31px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
   }
 
   &__button {
